feat: :rocket: initial commit
Configure proyect (ESLint, Prettier, Readme, License). Installing dependencies (NgRx, TailwindCSS, Prettier). Creating basic layout and basic pages (home,stadistics,transactions)

--- a/angular.json
+++ b/angular.json
@@ -97,8 +97,24 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "c23616dd-d889-4ae7-81de-4b072ce9d483",
+    "schematicCollections": [
+      "@angular-eslint/schematics",
+      "@ngrx/schematics"
+    ]
   }
 }
