--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/cli": "~15.2.7",
     "@angular/compiler-cli": "^15.2.0",
     "@ngrx/schematics": "^15.4.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
